test-suite/typecheck/pass/interface_impl_simple.first
import * "Prelude"
function f() -> String { return intToString(42); }
