test-suite/typecheck/fail/generic_arity_mismatch.first
import * "Prelude"
function f() -> Option<Int, Int> {
  return none();
}
